@@ -1,10 +1,11 @@
-$Id: NEWS,v 1.587 2004-07-20 17:39:58 castaglia Exp $
+$Id: NEWS,v 1.588 2004-07-21 23:58:09 castaglia Exp $
 
 CVS
 --------------------------------
 - Bug 2440 - Unable to use PAM authentication properly.  Use a "*" after
   the module name in an AuthOrder directive to indicate that an auth
   module is authoritative.
+- Bug 2441 - AIX5 portability bug with mod_auth_unix, mod_auth_file.
 
 1.2.10rc3 - Released 13-Jul-2004
 --------------------------------
